Enhance cache subscriptions